--- a/website/src/App.css
+++ b/website/src/App.css
@@ -1,4 +1,5 @@
 /* App.css */
+@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css");
 
 .App {
   text-align: center;
@@ -11,7 +12,7 @@
 h1 {
   font-size: 4.5rem;
   margin-bottom: 2rem;
-  background: -webkit-linear-gradient(#598fe7, #3374be);
+  background: -webkit-linear-gradient(#6597e7, #265994);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
@@ -20,17 +21,6 @@ p {
   color: #4b81d6;
   font-size: 1.3rem;
   margin-bottom: 2rem;
-}
-
-.fileBox {
-  border: 3px dashed #4b81d6;
-  padding: 3rem;
-  border-radius: 12px;
-  width: 60%;
-  max-width: 500px;
-  margin: 0 auto;
-  cursor: pointer;
-  transition: border-color 0.2s ease;
 }
 
 .fileBox:hover {
@@ -46,19 +36,20 @@ p {
 
 
 .errorMessage{
-  color: red;
+  color: #ad1f1f;
+  font-weight: bold;
 }
 
 .fileList {
   margin-top: 20px;
-  width: 60%;
-  max-width: 500px;
+  width: 40%;
+  max-width: 600px;
   margin-left: auto;
   margin-right: auto;
   text-align: left;
   border-radius: 8px;
   padding: 1rem;
-  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.05);
+  box-shadow: 0 2px 8px #5a1f1f0d;
   border: 2px solid #4b81d6;
 }
 
@@ -69,17 +60,12 @@ p {
 
 .fileItem {
   padding: 6px 0;
-  border-bottom: 1px solid #eee;
-  color: #555;
+  color: #556075;
   font-size: 0.95rem;
 }
 
-.fileItem:last-child {
-  border-bottom: none;
-}
-
 .btn{
-  margin-top:20px;
+  margin-top:8px;
   font-size: 1.3em;
   font-family: "Source Sans Pro", sans-serif;
   cursor: pointer;
@@ -98,12 +84,18 @@ p {
     background-color: #3d3d3d;
 }
 
+.btn--fileBox {
+  color: #4b97d6bd;
+  border: 2px solid #4b97d6bd;
+  width: 408px;
+}
+
 .btn--r{
-  color: #a54141;
-  border: 2px solid #a54141;
+  color: #a54141bd;
+  border: 2px solid #a54141bd;
 }
 
 .btn--c{
-  color: #4b97d6;
-  border: 2px solid #4b97d6;
+  color: #41a567bd;
+  border: 2px solid #41a567bd;
 }
