--- a/website/src/App.css
+++ b/website/src/App.css
@@ -130,10 +130,12 @@ p {
   padding: 2rem;
   border-radius: 15px;
   border: 2px solid #4b81d6;
-  min-width: 300px;
-  max-width: 500px;
+  min-width: 800px;
   position: relative;
   color: #4b81d6;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .popup-content h2 {
@@ -149,9 +151,44 @@ p {
   margin-top: 1rem;
 }
 
+.compilation-options-container {
+  display: flex;
+  gap: 20px;
+  padding: 20px;
+  width: 100%;
+  justify-content: center;
+}
+
+.compilation-option {
+  flex: 1;
+  padding: 15px;
+  max-width: 350px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  min-height: 400px;
+}
+
+.compilation-divider {
+  width: 1px;
+  background-color: #e0e0e0;
+  margin: 0 10px;
+}
+
+.btn--download {
+  color: #4191a5bd;
+  border: 2px solid #4191a5bd;
+  margin-top: auto;
+}
+
 .columns-container {
   margin: 1rem 0;
   text-align: left;
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  width: 100%;
 }
 
 .columns-container h3 {
@@ -160,12 +197,10 @@ p {
 }
 
 .columns-list {
-  max-height: 300px;
+  max-height: 400px;
   overflow-y: auto;
-  padding: 1rem;
-  background-color: #131313;
-  border-radius: 8px;
-  border: 1px solid #4b81d6;
+  padding-right: 10px;
+  flex: 1;
 }
 
 .column-item {
@@ -196,8 +231,8 @@ p {
 .column-item input[type="checkbox"]:checked::after {
   content: '';
   position: absolute;
-  left: 4px;
-  top: 1px;
+  left: 3.5px;
+  top: 0.7px;
   width: 5px;
   height: 8px;
   border: solid white;
